[gd_scene load_steps=12 format=4 uid="uid://bo6qfusag3fae"]

[ext_resource type="Script" uid="uid://c38tkgfys3d63" path="res://scenes/quests/lore_quests/quest_001/2_ink_combat/components/ink_combat.gd" id="1_2m7sn"]
[ext_resource type="Resource" uid="uid://cmhcuoms2kh1a" path="res://scenes/quests/lore_quests/quest_001/2_ink_combat/components/dialogues/ink_well.dialogue" id="2_fgs83"]
[ext_resource type="Script" uid="uid://cp54mgi54nywo" path="res://scenes/quests/lore_quests/quest_001/2_ink_combat/components/fill_game_logic.gd" id="3_4iw8v"]
[ext_resource type="TileSet" uid="uid://07fq3rspk8ia" path="res://scenes/tileset.tres" id="4_je2ou"]
[ext_resource type="PackedScene" uid="uid://iu2q66clupc6" path="res://scenes/game_elements/characters/player/player.tscn" id="5_k5uk8"]
[ext_resource type="PackedScene" uid="uid://b82nsrh332syj" path="res://scenes/quests/lore_quests/quest_001/2_ink_combat/components/throwing_enemy/throwing_enemy.tscn" id="6_te0v3"]
[ext_resource type="PackedScene" uid="uid://y8ha8abfyap2" path="res://scenes/quests/lore_quests/quest_001/2_ink_combat/components/filling_barrel/filling_barrel.tscn" id="7_1srav"]
[ext_resource type="PackedScene" uid="uid://fuhl3l6gxq5k" path="res://scenes/game_elements/props/collectible_item/collectible_item.tscn" id="8_hyj3v"]
[ext_resource type="Script" uid="uid://bgmwplmj3bfls" path="res://scenes/globals/game_state/inventory/inventory_item.gd" id="9_rww0x"]
[ext_resource type="PackedScene" uid="uid://cfcgrfvtn04yp" path="res://scenes/ui_elements/hud/hud.tscn" id="10_i5hhc"]

[sub_resource type="Resource" id="Resource_na0be"]
script = ExtResource("9_rww0x")
name = ""
type = 2
metadata/_custom_type_script = "uid://bgmwplmj3bfls"

[node name="InkCombat" type="Node2D"]
script = ExtResource("1_2m7sn")

[node name="FillGameLogic" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_4iw8v")

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="Water" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAABAAAAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAACAAAAAAAAAAAAAAACAAkAAAAAAAAAAAADAAAAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAAAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAADAAgAAAAAAAAAAAACAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAQAAAAAAAAAAAA=")
tile_set = ExtResource("4_je2ou")

[node name="Foam" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAABAAAAAgABAAAAAAACAAAAAgABAAAAAAADAAAAAgABAAAAAAAEAAAAAgABAAAAAAAFAAAAAgABAAAAAAAGAAAAAgABAAAAAAAHAAAAAgABAAAAAAAIAAAAAgABAAAAAAAJAAAAAgABAAAAAAAKAAAAAgABAAAAAAALAAAAAgABAAAAAAAMAAAAAgABAAAAAAANAAAAAgABAAAAAAABAAgAAgABAAIAAAACAAgAAgABAAIAAAADAAgAAgABAAIAAAAEAAgAAgABAAIAAAAFAAgAAgABAAIAAAAGAAgAAgABAAIAAAAHAAgAAgABAAIAAAAIAAgAAgABAAIAAAAJAAgAAgABAAIAAAAKAAgAAgABAAIAAAALAAgAAgABAAIAAAAMAAgAAgABAAIAAAANAAgAAgABAAIAAAAAAAEAAgAAAAEAAAAAAAIAAgAAAAEAAAAAAAMAAgAAAAEAAAAAAAQAAgAAAAEAAAAAAAUAAgAAAAEAAAAAAAYAAgAAAAEAAAAAAAcAAgAAAAEAAAABAAEAAgABAAEAAAABAAIAAgABAAEAAAABAAMAAgABAAEAAAABAAQAAgABAAEAAAABAAUAAgABAAEAAAABAAYAAgABAAEAAAABAAcAAgABAAEAAAACAAEAAgABAAEAAAACAAIAAgABAAEAAAACAAMAAgABAAEAAAACAAQAAgABAAEAAAACAAUAAgABAAEAAAACAAYAAgABAAEAAAACAAcAAgABAAEAAAADAAEAAgABAAEAAAADAAIAAgABAAEAAAADAAMAAgABAAEAAAADAAQAAgABAAEAAAADAAUAAgABAAEAAAADAAYAAgABAAEAAAADAAcAAgABAAEAAAAEAAEAAgABAAEAAAAEAAIAAgABAAEAAAAEAAMAAgABAAEAAAAEAAQAAgABAAEAAAAEAAUAAgABAAEAAAAEAAYAAgABAAEAAAAEAAcAAgABAAEAAAAFAAEAAgABAAEAAAAFAAIAAgABAAEAAAAFAAMAAgABAAEAAAAFAAQAAgABAAEAAAAFAAUAAgABAAEAAAAFAAYAAgABAAEAAAAFAAcAAgABAAEAAAAGAAEAAgABAAEAAAAGAAIAAgABAAEAAAAGAAMAAgABAAEAAAAGAAQAAgABAAEAAAAGAAUAAgABAAEAAAAGAAYAAgABAAEAAAAGAAcAAgABAAEAAAAHAAEAAgABAAEAAAAHAAIAAgABAAEAAAAHAAMAAgABAAEAAAAHAAQAAgABAAEAAAAHAAUAAgABAAEAAAAHAAYAAgABAAEAAAAHAAcAAgABAAEAAAAIAAEAAgABAAEAAAAIAAIAAgABAAEAAAAIAAMAAgABAAEAAAAIAAQAAgABAAEAAAAIAAUAAgABAAEAAAAIAAYAAgABAAEAAAAIAAcAAgABAAEAAAAJAAEAAgABAAEAAAAJAAIAAgABAAEAAAAJAAMAAgABAAEAAAAJAAQAAgABAAEAAAAJAAUAAgABAAEAAAAJAAYAAgABAAEAAAAJAAcAAgABAAEAAAAKAAEAAgABAAEAAAAKAAIAAgABAAEAAAAKAAMAAgABAAEAAAAKAAQAAgABAAEAAAAKAAUAAgABAAEAAAAKAAYAAgABAAEAAAAKAAcAAgABAAEAAAALAAEAAgABAAEAAAALAAIAAgABAAEAAAALAAMAAgABAAEAAAALAAQAAgABAAEAAAALAAUAAgABAAEAAAALAAYAAgABAAEAAAALAAcAAgABAAEAAAAMAAEAAgABAAEAAAAMAAIAAgABAAEAAAAMAAMAAgABAAEAAAAMAAQAAgABAAEAAAAMAAUAAgABAAEAAAAMAAYAAgABAAEAAAAMAAcAAgABAAEAAAANAAEAAgABAAEAAAANAAIAAgABAAEAAAANAAMAAgABAAEAAAANAAQAAgABAAEAAAANAAUAAgABAAEAAAANAAYAAgABAAEAAAANAAcAAgABAAEAAAAOAAEAAgACAAEAAAAOAAIAAgACAAEAAAAOAAMAAgACAAEAAAAOAAQAAgACAAEAAAAOAAUAAgACAAEAAAAOAAYAAgACAAEAAAAOAAcAAgACAAEAAAA=")
tile_set = ExtResource("4_je2ou")

[node name="Ground" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAANAAcAAQACAAIAAAANAAYAAQACAAEAAAANAAUAAQACAAEAAAANAAQAAQACAAEAAAANAAMAAQACAAEAAAANAAIAAQACAAEAAAANAAEAAQACAAAAAAAMAAcAAQABAAIAAAAMAAYAAQABAAEAAAAMAAUAAQABAAEAAAAMAAQAAQABAAEAAAAMAAMAAQABAAEAAAAMAAIAAQABAAEAAAAMAAEAAQABAAAAAAALAAcAAQABAAIAAAALAAYAAQABAAEAAAALAAUAAQABAAEAAAALAAQAAQABAAEAAAALAAMAAQABAAEAAAALAAIAAQABAAEAAAALAAEAAQABAAAAAAAKAAcAAQABAAIAAAAKAAYAAQABAAEAAAAKAAUAAQABAAEAAAAKAAQAAQABAAEAAAAKAAMAAQABAAEAAAAKAAIAAQABAAEAAAAKAAEAAQABAAAAAAAJAAcAAQABAAIAAAAJAAYAAQABAAEAAAAJAAUAAQABAAEAAAAJAAQAAQABAAEAAAAJAAMAAQABAAEAAAAJAAIAAQABAAEAAAAJAAEAAQABAAAAAAAIAAcAAQABAAIAAAAIAAYAAQABAAEAAAAIAAUAAQABAAEAAAAIAAQAAQABAAEAAAAIAAMAAQABAAEAAAAIAAIAAQABAAEAAAAIAAEAAQABAAAAAAAHAAcAAQABAAIAAAAHAAYAAQABAAEAAAAHAAUAAQABAAEAAAAHAAQAAQABAAEAAAAHAAMAAQABAAEAAAAHAAIAAQABAAEAAAAHAAEAAQABAAAAAAAGAAcAAQABAAIAAAAGAAYAAQABAAEAAAAGAAUAAQABAAEAAAAGAAQAAQABAAEAAAAGAAMAAQABAAEAAAAGAAIAAQABAAEAAAAGAAEAAQABAAAAAAAFAAcAAQABAAIAAAAFAAYAAQABAAEAAAAFAAUAAQABAAEAAAAFAAQAAQABAAEAAAAFAAMAAQABAAEAAAAFAAIAAQABAAEAAAAFAAEAAQABAAAAAAAEAAcAAQABAAIAAAAEAAYAAQABAAEAAAAEAAUAAQABAAEAAAAEAAQAAQABAAEAAAAEAAMAAQABAAEAAAAEAAIAAQABAAEAAAAEAAEAAQABAAAAAAADAAcAAQABAAIAAAADAAYAAQABAAEAAAADAAUAAQABAAEAAAADAAQAAQABAAEAAAADAAMAAQABAAEAAAADAAIAAQABAAEAAAADAAEAAQABAAAAAAACAAcAAQABAAIAAAACAAYAAQABAAEAAAACAAUAAQABAAEAAAACAAQAAQABAAEAAAACAAMAAQABAAEAAAACAAIAAQABAAEAAAACAAEAAQABAAAAAAABAAcAAQAAAAIAAAABAAYAAQAAAAEAAAABAAUAAQAAAAEAAAABAAQAAQAAAAEAAAABAAMAAQAAAAEAAAABAAIAAQAAAAEAAAABAAEAAQAAAAAAAAA=")
tile_set = ExtResource("4_je2ou")

[node name="OnTheGround" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="OnTheGround" instance=ExtResource("5_k5uk8")]
position = Vector2(321, 254)

[node name="ThrowingEnemy" parent="OnTheGround" instance=ExtResource("6_te0v3")]
position = Vector2(840, 329)

[node name="FillingBarrel" parent="OnTheGround" instance=ExtResource("7_1srav")]
position = Vector2(630, 106)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel2" parent="OnTheGround" instance=ExtResource("7_1srav")]
position = Vector2(841, 165)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel3" parent="OnTheGround" instance=ExtResource("7_1srav")]
position = Vector2(876, 462)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel4" parent="OnTheGround" instance=ExtResource("7_1srav")]
position = Vector2(790, 448)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel6" parent="OnTheGround" instance=ExtResource("7_1srav")]
position = Vector2(707, 465)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel7" parent="OnTheGround" instance=ExtResource("7_1srav")]
position = Vector2(624, 448)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel5" parent="OnTheGround" instance=ExtResource("7_1srav")]
position = Vector2(725, 85)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="CollectibleItem" parent="OnTheGround" instance=ExtResource("8_hyj3v")]
unique_name_in_owner = true
position = Vector2(186, 280)
revealed = false
scene_to_go_to = "uid://db6vhi7s2f37c"
item = SubResource("Resource_na0be")
collected_dialogue = ExtResource("2_fgs83")
dialogue_title = &"well_done"

[node name="ScreenOverlay" type="CanvasLayer" parent="."]

[node name="HUD" parent="." instance=ExtResource("10_i5hhc")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 2048
limit_bottom = 2048
position_smoothing_enabled = true
editor_draw_limits = true

[connection signal="goal_reached" from="." to="OnTheGround/CollectibleItem" method="reveal"]
